--- a/Tankzor/Config/DefaultInput.ini
+++ b/Tankzor/Config/DefaultInput.ini
@@ -45,6 +45,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="AimHorizontal",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=Gamepad_LeftY,Scale=1.000000)
++AxisMappings=(AxisName="LeftTrack Throttle",Key=Gamepad_LeftTriggerAxis,Scale=1.000000)
++AxisMappings=(AxisName="LeftTrack Throttle",Key=A,Scale=1.000000)
++AxisMappings=(AxisName="RightTrack Throttle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
++AxisMappings=(AxisName="RightTrack Throttle",Key=D,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
