Basic movement/sliding

--- a/Tankzor/Config/DefaultInput.ini
+++ b/Tankzor/Config/DefaultInput.ini
@@ -49,6 +49,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="LeftTrack Throttle",Key=A,Scale=1.000000)
 +AxisMappings=(AxisName="RightTrack Throttle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
 +AxisMappings=(AxisName="RightTrack Throttle",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="LeftTrack Throttle",Key=Gamepad_LeftShoulder,Scale=-0.500000)
++AxisMappings=(AxisName="LeftTrack Throttle",Key=Q,Scale=-0.500000)
++AxisMappings=(AxisName="RightTrack Throttle",Key=Gamepad_RightShoulder,Scale=-0.500000)
++AxisMappings=(AxisName="RightTrack Throttle",Key=E,Scale=-0.500000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
