--- a/Tankzor/Config/DefaultInput.ini
+++ b/Tankzor/Config/DefaultInput.ini
@@ -46,13 +46,18 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="LeftTrack Throttle",Key=Gamepad_LeftTriggerAxis,Scale=1.000000)
-+AxisMappings=(AxisName="LeftTrack Throttle",Key=A,Scale=1.000000)
++AxisMappings=(AxisName="LeftTrack Throttle",Key=Q,Scale=1.000000)
 +AxisMappings=(AxisName="RightTrack Throttle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
-+AxisMappings=(AxisName="RightTrack Throttle",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="RightTrack Throttle",Key=E,Scale=1.000000)
 +AxisMappings=(AxisName="LeftTrack Throttle",Key=Gamepad_LeftShoulder,Scale=-0.500000)
-+AxisMappings=(AxisName="LeftTrack Throttle",Key=Q,Scale=-0.500000)
++AxisMappings=(AxisName="LeftTrack Throttle",Key=Z,Scale=-0.500000)
 +AxisMappings=(AxisName="RightTrack Throttle",Key=Gamepad_RightShoulder,Scale=-0.500000)
-+AxisMappings=(AxisName="RightTrack Throttle",Key=E,Scale=-0.500000)
++AxisMappings=(AxisName="RightTrack Throttle",Key=X,Scale=-0.500000)
++AxisMappings=(AxisName="Move Forward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="Move Forward",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="Turn Right",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="Turn Right",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="Turn Right",Key=A,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
