--- a/Tankzor/Config/DefaultGame.ini
+++ b/Tankzor/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=8737B6FC4497EAA9E154739ABD5E681C
+CopyrightNotice=Copyright woop woop
 
 [StartupActions]
 bAddPacks=True
